cmake_minimum_required(VERSION 3.16.3...3.19.7 FATAL_ERROR)

project(PHF_analysis)

#-----------------------------------------------------------------------------
# Extension meta-information
set(EXTENSION_HOMEPAGE "https://www.slicer.org/wiki/Documentation/Nightly/Extensions/PHF_analysis")
set(EXTENSION_CONTRIBUTORS "Elise Joulain (B-lab (University of Geneva))")
set(EXTENSION_DESCRIPTION "Proximal humerus fracture analysis tool.")
set(EXTENSION_ICONURL "https://www.example.com/Slicer/Extensions/PHF_analysis.png")
set(EXTENSION_SCREENSHOTURLS "https://www.example.com/Slicer/Extensions/PHF_analysis/Screenshots/1.png")
set(EXTENSION_DEPENDS "NA") # Specified as a list or "NA" if no dependencies

#-----------------------------------------------------------------------------
# Extension dependencies
find_package(Slicer REQUIRED)
include(${Slicer_USE_FILE})

#-----------------------------------------------------------------------------
# Extension modules
add_subdirectory(PHF_analysis)
## NEXT_MODULE

#-----------------------------------------------------------------------------
include(${Slicer_EXTENSION_GENERATE_CONFIG})
include(${Slicer_EXTENSION_CPACK})
